# Week3_MLE

./: .gitignore  README.md  check.parquet  pyproject.toml
data/processed/: features.csv  sample_features.csv
models/registry/: latest.txt
models/runs/2025-12-30T08-28-40Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T08-45-17Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-01-04Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-01-05Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-04-44Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-14-28Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-17-16Z__classification__seed42/: run_meta.json
models/runs/2025-12-30T09-18-34Z__classification__seed42/: run_meta.json
outputs/: holdout_input_infer.csv  holdout_preds.csv  preds.csv
reports/: eval_summary.md  model_card.md  task3_columns.md
scripts/: backfill_run_meta.py  clean_predict_for_ruff.py  fix_ruff_two_errors.py  fix_week3.py  make_infer_from_latest_schema.py  patch_cli_main.py  patch_splits.py  patch_train_schema_fallback.py  write_eval_summary.py  write_model_card.py
src/ml_baseline/: cli.py  config.py  io.py  metrics.py  pipeline.py  predict.py  run_dirs.py  run_meta.py  sample_data.py  schema.py  schema.py.bak.1767295197  show_run.py  splits.py  train.py  train.py.bak.1767295727  train.py.bak.1767295998  train_impl.py
src/ml_baseline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_schema.py
(+19 files in other folders)
