[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-baseline"
version = "0.1.0"
description = "Week 3 ML baseline system"
requires-python = ">=3.10"

[project.scripts]
ml-baseline = "ml_baseline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
