[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-baseline"
version = "0.1.0"
description = "Week 3 ML baseline system"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "typer[all]>=0.21.0",
]

[project.scripts]
ml-baseline = "ml_baseline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
